--- a/components/Search/CitySearch.module.scss
+++ b/components/Search/CitySearch.module.scss
@@ -11,8 +11,8 @@
 
 #citySearchInput {
     border: 2px solid black;
-    border-radius: 10px;
-    padding: 2px 7px;
+    border-radius: 20px;
+    padding: 5px 11px;
     width: 100%;
 
     & + .loadingIcon {
@@ -24,14 +24,16 @@
 
 .citySearchContainer {
     position: relative;
-    flex: 1 0 auto;
+    z-index: 5;
+    flex: 1 1 auto;
+    
+    background-color: whiteToronto, CanadaToronto, Canada;
 }
 
 .citySearchItemList {
     font-size: 1rem;
-    border: 1px solid black;
     border-radius: 4px;
-    box-shadow: 0 1px 2px;
+    box-shadow: 0 0 2px;
     padding: 2px;
 }
 
